[package]
name = "bluekey"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.17.4", features = ["full"] }
clap = { version = "4.6.2", features = ["derive"] }
env_logger = "0.11.11"
evdev = { version = "0.13.2", features = ["tokio"] }
futures = "0.3.32"
keycode = "1.0.0"
log = "0.4.33"
serde = "1.0.229"
tokio = { version = "1.52.3", features = ["io-std"] }
zbus = { version = "5.18.0",  default-features = false, features = ["tokio"] }
zvariant = "5.13.1"
